Check FB if you haven't already.

--- a/tetris/Changelog.txt
+++ b/tetris/Changelog.txt
@@ -1,3 +1,6 @@
+Zach - 5/19/12
+I sent you a facebook message, go check it out. I like what you've got.
+
 {
 Andy - 5/19/12
 -made a bunch of changes to rotate functions
